--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "motion": "^12.27.5",
     "next": "16.1.2",
     "next-auth": "5.0.0-beta.30",
     "nodemailer": "^7.0.12",
