--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "16.1.2",
     "next-auth": "5.0.0-beta.30",
     "nodemailer": "^7.0.12",
+    "openai": "^6.16.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "resend": "^6.8.0",
