--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8088",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start -p 8088",
     "lint": "eslint"
