--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "motion": "^12.27.5",
+    "nanoid": "^5.1.6",
     "next": "16.1.2",
     "next-auth": "5.0.0-beta.30",
     "nodemailer": "^7.0.12",
